--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,7 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_deps = chris--a/Keypad@^3.1.1
-lib_archive = no 
+lib_deps = 
+	chris--a/Keypad@^3.1.1
+	laurb9/StepperDriver@^1.3.1
+lib_archive = no
