--- a/platformio.ini
+++ b/platformio.ini
@@ -18,5 +18,7 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.10.13
 	adafruit/Adafruit TouchScreen@^1.1.3
 	adafruit/Adafruit-TFT-LCD@0.0.0-alpha+sha.9b701b6d5a
+	paulstoffregen/Encoder@^1.4.1
+	mathertel/RotaryEncoder@^1.5.2
 lib_archive = no
 monitor_filters = time, default
